feat(books-api): add swagger to handlers
